--- a/index.html
+++ b/index.html
@@ -39,171 +39,279 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
-          <li><a href="#">Link</a></li>
+          <li><a href="#works">How it works</a></li>
+          <li><a href="#benefits">Benefits</a></li>
+          <li><a href="#pricing">Pricing</a></li>
         </ul>
       </div><!-- /.navbar-collapse -->
 
     </div>
   </nav>
 
-  <!-- Main Content -->
-  <div class="container">
-
-    <!-- Call to Action -->
-    <section class="hero">
-      <div class="center"><img src="http://placehold.it/980x450"></div>
-    </section>
-
-    <!-- One Third Layout -->
-    <div class="content row">
-      <div class="col-xs-12 col-md-4">
-        <div class="header">Header</div>
-        <img class="img-rounded" src="http://placehold.it/300x200">
-        Bresaola short ribs alcatra, beef turkey drumstick prosciutto pork belly rump cupim shank tail. Flank bresaola chuck ham ham hock tenderloin tongue frankfurter pig boudin turkey doner. Pork shoulder pork loin, sausage bacon bresaola pig beef ribs meatball short loin andouille. Pork loin spare ribs chicken shankle.
-      </div>
-
-      <div class="col-xs-12 col-md-4">
-        <div class="header">Header</div>
-        <img class="img-rounded" src="http://placehold.it/300x200">
-        Bresaola short ribs alcatra, beef turkey drumstick prosciutto pork belly rump cupim shank tail. Flank bresaola chuck ham ham hock tenderloin tongue frankfurter pig boudin turkey doner. Pork shoulder pork loin, sausage bacon bresaola pig beef ribs meatball short loin andouille. Pork loin spare ribs chicken shankle.
-      </div>
-
-      <div class="col-xs-12 col-md-4">
-        <div class="header">Header</div>
-        <img class="img-rounded" src="http://placehold.it/300x200">
-        Bresaola short ribs alcatra, beef turkey drumstick prosciutto pork belly rump cupim shank tail. Flank bresaola chuck ham ham hock tenderloin tongue frankfurter pig boudin turkey doner. Pork shoulder pork loin, sausage bacon bresaola pig beef ribs meatball short loin andouille. Pork loin spare ribs chicken shankle.
+  <!-- Call to Action -->
+  <section class="hero">
+    <div class="container">
+      <div class="col-xs-12 hero-header">
+        <span class="title">
+          Get Your Company Online Now!
+          <br>
+          Without Knowing Anything About the Web
+        </span>
+        <br><br>
+        <span class="subtitle">
+          We'll provide all the necessary services to handle your online presence.
+        </span>
+        <br><br>
+        <span class="subtitle">Websites</span>
+        <br><br>
+        <span class="subtitle">Social Media</span>
+        <br><br>
+        <span class="subtitle">Strategic Planning</span>
+        <br><br>
+        <span class="subtitle">And More!</span>
       </div>
     </div>
+  </section>
 
-    <!-- One Half Layout -->
-    <div class="content row">
-      <div class="col-xs-12 col-md-6 center">
-        <img class="img-thumbnail img-responsive" src="http://placehold.it/445x350">
-      </div>
+  <!-- How it works -->
+  <div id="works" class="container band">
 
-      <div class="show-mobile img-spacer"></div>
-
-      <div class="col-xs-12 col-md-6 center">
-        <img class="img-thumbnail img-responsive" src="http://placehold.it/445x350">
-      </div>
+    <div class="row text-center header">
+      <h2>How it works</h2>
     </div>
 
-    <!-- One Fourth Layout -->
-    <div class="content row">
+    <!-- Planning -->
+    <div class="row">
       <div class="col-xs-12 col-md-3">
-        <div class="sub-header">Sub Header</div>
-        <img class="img-rounded img-reponsive" src="http://placehold.it/225x150">
-        Corned beef ham alcatra pork loin chuck, beef ribs shankle. Chicken doner short loin, ribeye drumstick ham pancetta biltong turducken jowl filet mignon fatback bresaola t-bone. Porchetta kielbasa spare ribs, venison andouille turducken t-bone. Swine pork chop alcatra leberkas.
-      </div>
-
-      <div class="col-xs-12 col-md-3">
-        <div class="sub-header">Sub Header</div>
-        <img class="img-rounded img-reponsive" src="http://placehold.it/225x150">
-        Corned beef ham alcatra pork loin chuck, beef ribs shankle. Chicken doner short loin, ribeye drumstick ham pancetta biltong turducken jowl filet mignon fatback bresaola t-bone. Porchetta kielbasa spare ribs, venison andouille turducken t-bone. Swine pork chop alcatra leberkas.
-      </div>
-
-      <div class="col-xs-12 col-md-3">
-        <div class="sub-header">Sub Header</div>
-        <img class="img-rounded img-reponsive" src="http://placehold.it/225x150">
-        Corned beef ham alcatra pork loin chuck, beef ribs shankle. Chicken doner short loin, ribeye drumstick ham pancetta biltong turducken jowl filet mignon fatback bresaola t-bone. Porchetta kielbasa spare ribs, venison andouille turducken t-bone. Swine pork chop alcatra leberkas.
-      </div>
-
-      <div class="col-xs-12 col-md-3">
-        <div class="sub-header">Sub Header</div>
-        <img class="img-rounded img-reponsive" src="http://placehold.it/225x150">
-        Corned beef ham alcatra pork loin chuck, beef ribs shankle. Chicken doner short loin, ribeye drumstick ham pancetta biltong turducken jowl filet mignon fatback bresaola t-bone. Porchetta kielbasa spare ribs, venison andouille turducken t-bone. Swine pork chop alcatra leberkas.
-      </div>
-    </div>
-
-    <!-- 3/4 split content -->
-    <div class="content">
-      <div class="row">
-        <div class="col-xs-12 col-md-8 three-four-split">
-          <span class="bold">Attention</span><br />
-          Bacon ipsum dolor amet strip steak tail frankfurter turducken swine bresaola t-bone. Ribeye boudin biltong, short ribs cupim turkey sausage. Pork belly short loin sausage shankle landjaeger bresaola ham hock ball tip, chuck andouille. Bresaola rump brisket sausage boudin meatball flank picanha landjaeger salami meatloaf porchetta pork tail hamburger. Ham hock fatback shoulder jowl pork. Tongue pig alcatra, landjaeger salami ribeye drumstick picanha porchetta. Turducken shankle capicola jerky.
+        <div class="card">
+          <div class="title">
+            <span class="glyphicon glyphicon-list-alt header-icon"></span>
+            &nbsp;&nbsp;
+            <span class="header-text">Planning</span>
+          </div>
         </div>
+      </div>
 
-        <div class="col-xs-12 col-md-4 three-four-split">
-          <span class="bold">Attention</span><br />
-          Bacon ipsum dolor amet strip steak tail frankfurter turducken swine bresaola t-bone. Ribeye boudin biltong, short ribs cupim turkey sausage. Pork belly short loin sausage shankle landjaeger bresaola ham hock ball tip, chuck andouille.
+      <div class="col-xs-12 col-md-9">
+        <div class="card">
+          <div class="content">
+            We meet with you and figure out the best way to market your company online
+          </div>
         </div>
       </div>
     </div>
 
-  <!-- 3/4 split image content -->
-    <div class="content">
-      <div class="row">
-        <div class="col-xs-12 col-md-8">
-          <img class="img-rounded img-responsive" src="http://placehold.it/600x130">
+    <!-- Building -->
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <div class="card">
+          <div class="title">
+            <i class="glyphicon glyphicon-export header-icon"></i>
+            &nbsp;&nbsp;
+            <span class="header-text">Building</span>
+          </div>
         </div>
+      </div>
 
-        <div class="col-xs-12 col-md-4">
-          <span class="bold hide-mobile">Attention</span><br />
-          Bacon ipsum dolor amet strip steak tail frankfurter turducken swine bresaola t-bone. Ribeye boudin biltong, short ribs cupim turkey sausage. Pork belly short loin sausage shankle landjaeger bresaola ham hock ball tip, chuck andouille.
+      <div class="col-xs-12 col-md-9">
+        <div class="card">
+          <div class="content">
+            We'll build out your websites, social media, and anything else you might need
+          </div>
         </div>
       </div>
     </div>
 
+    <!-- Review -->
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <div class="card">
+          <div class="title">
+            <i class="glyphicon glyphicon-refresh header-icon"></i>
+            &nbsp;&nbsp;
+            <span class="header-text">Review</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-md-9">
+        <div class="card">
+          <div class="content">
+            We'll show you the finished product for review before it goes live
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Online -->
+    <div class="row">
+      <div class="col-xs-12 col-md-3">
+        <div class="card">
+          <div class="title">
+            <i class="glyphicon glyphicon-cloud-upload header-icon"></i>
+            &nbsp;&nbsp;
+            <span class="header-text">Online</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-md-9">
+        <div class="card">
+          <div class="content">
+            We'll put your site online and blast your social media
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Quote Section -->
+  <section class="quote lead band">
+    Getting your company online without any of the hassle
+  </section>
+
+  <!-- Features -->
+  <div id="benefits" class="container band">
+
+    <div class="row text-center header">
+      <h2>What's included</h2>
+    </div>
+
+    <div class="col-xs-12 col-md-4">
+      <div class="card">
+        <div class="header">
+          <i class="fa fa-cloud fa-2x"></i>
+          <br>
+          <span class="header-text">Websites</span>
+        </div>
+        <hr>
+        <div class="content">
+          Show us what you want your customers to see, and we'll build it out for you.
+          <br><br>
+          We'll build a landing page just like this one and up to 5 more pages.
+          <br><br>
+          We'll handle updating your website for you as well.
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4">
+      <div class="card">
+        <div class="header">
+          <i class="fa fa-facebook-official fa-2x"></i><br>
+          <span class="header-text">Facebook</span>
+        </div>
+        <hr>
+        <div class="content">
+          We'll setup a Facebook account for you and help you manage it
+          <br><br>
+          Keep your customers up to date with everything going on with your business
+          <br><br>
+          Interact with your customers on a deeply personal level
+        </div>
+      </div>
+    </div>
+
+    <div class="col-xs-12 col-md-4">
+      <div class="card">
+        <div class="header">
+          <i class="fa fa-yelp fa-2x"></i><br>
+          <span class="header-text">Yelp</span>
+        </div>
+        <hr>
+        <div class="content">
+          We'll claim your yelp account or help moderate the one you already use
+          <br><br>
+          Keep track of what your customers are saying about you
+          <br><br>
+          <br><br>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- Quote Section -->
+  <section class="quote lead band">
+    You manage your business, we'll take care of the rest
+  </section>
+
+  <!-- Features -->
+  <div id="pricing" class="container band">
+
+    <div class="row text-center pricing-header">
+      <h2>Pricing</h2>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-6">
+        <div class="card">
+          <div class="header">
+            <span class="header-text">Basic Packages</span>
+          </div>
+          <hr>
+          <div class="content">
+            <ul>
+              <li>1 Website including 5 pages</li>
+              <li>Basic SEO for your page</li>
+              <li>Basic Social Media Marketing</li>
+              <li>10 Photos</li>
+            </ul>
+          </div>
+          <hr>
+          <div class="content">
+            $99 / month
+          </div>
+        </div>
+      </div>
+
+      <div class="col-xs-12 col-md-6">
+        <div class="card">
+          <div class="header">
+            <span class="header-text">Upgrade Package</span>
+          </div>
+          <hr>
+          <div class="content">
+            <ul>
+              <li>Everything in the Basic Package</li>
+              <li>Daily Social Media Blasts</li>
+            </ul>
+          </div>
+          <hr>
+          <div class="content">
+            $249 / month
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-xs-12 col-md-12">
+        <div class="card extras">
+          <div class="header">
+            <span class="header-text">Extras</span>
+          </div>
+          <hr>
+          <div class="content">
+            <ul>
+              <li>Manage your ads ($49/month)</li>
+              <li>5 More pages ($19/month)</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <!-- Footer Area -->
   <div class="container footer">
     <div class="container">
-      <div class="row">
-        <!-- 1st Column -->
-        <div class="col-xs-12 col-md-3">
-          <div class="footer-header">About Our Products</div>
-          <ul>
-            <li>Bacon ipsum dolor amet strip</li>
-            <li>Bacon ipsum dolor amet strip</li>
-            <li>Bacon ipsum dolor amet strip</li>
-            <li>Bacon ipsum dolor amet strip</li>
-          </ul>
-        </div>
-
-        <!-- 2nd Column -->
-        <div class="col-xs-12 col-md-3">
-          <div class="footer-header">About Our Company</div>
-          <ul>
-            <li>landjaeger bresaola ham hock ball</li>
-            <li>landjaeger bresaola ham hock ball</li>
-            <li>landjaeger bresaola ham hock ball</li>
-            <li>landjaeger bresaola ham hock ball</li>
-          </ul>
-        </div>
-
-        <!-- 3rd Column -->
-        <div class="col-xs-12 col-md-3">
-          <div class="footer-header">Help</div>
-          <ul>
-            <li>Pork loin short loin brisket turkey</li>
-            <li>Pork loin short loin brisket turkey</li>
-            <li>Pork loin short loin brisket turkey</li>
-            <li>Pork loin short loin brisket turkey</li>
-          </ul>
-        </div>
-
-        <!-- 4th Column -->
-        <div class="col-xs-12 col-md-3">
-          <div class="footer-header">Contact Us</div>
-          <ul>
-            <li>Corned beef ham alcatra pork loin</li>
-            <li>Corned beef ham alcatra pork loin</li>
-            <li>Corned beef ham alcatra pork loin</li>
-            <li>Corned beef ham alcatra pork loin</li>
-          </ul>
-        </div>
-      </div>
-
       <div class="row footer-copyright">Copyright 2016</div>
     </div>
   </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  <script src="https://use.fontawesome.com/657370856f.js"></script>
   <!-- <script src="js/main.js"></script> -->
 
 
